--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.4",
     "echarts": "^5.0.2",
     "element-ui": "^2.15.0",
     "font-awesome": "^4.7.0",
